--- a/index.html
+++ b/index.html
@@ -32,44 +32,43 @@
       points to ensure that your project is successful</p>
   </div>
 
-    <div class="left-container">
-      <div id="card-supervisor" class="card">
-        <div class="card-body">
-          <h2 class="card-title">Supervisor</h2>
-          <p class="card-text">Monitors activity to identify project roadblocks</p>
-          <img class="icon" src="images/icon-supervisor.svg" alt="supervisor-img">
+    <div class="flex-container">
+        <div id="card-supervisor" class="card">
+          <div class="card-body">
+            <h2 class="card-title">Supervisor</h2>
+            <p class="card-text">Monitors activity to identify project roadblocks</p>
+            <img class="icon" src="images/icon-supervisor.svg" alt="supervisor-img">
+          </div>
         </div>
+
+      <div class="middle-container">
+        <div id="card-teambuilder" class="card">
+          <div class="card-body">
+            <h2 class="card-title">Team Builder</h2>
+            <p class="card-text">Scans our talent network to create the optimal team for your project</p>
+            <img class="icon" src="images/icon-team-builder.svg" alt="teambuilder-img">
+          </div>
+        </div>
+
+        <div id="card-karma" class="card">
+          <div class="card-body">
+            <h2 class="card-title">Karma</h2>
+            <p class="card-text">Regularly evaluates our talent to ensure quality</p>
+            <img class="icon" src="images/icon-karma.svg" alt="karma-img">
+          </div>
+        </div>
+
       </div>
+        <div id="card-calculator" class="card">
+          <div class="card-body">
+            <h2 class="card-title">Calculator</h2>
+            <p class="card-text">Uses data from past projects to provide better delivery estimates</p>
+            <img class="icon" src="images/icon-calculator.svg" alt="calculator-img">
+          </div>
+        </div>
     </div>
 
-    <div class="middle-container">
-      <div id="card-teambuilder" class="card">
-        <div class="card-body">
-          <h2 class="card-title">Team Builder</h2>
-          <p class="card-text">Scans our talent network to create the optimal team for your project</p>
-          <img class="icon" src="images/icon-team-builder.svg" alt="teambuilder-img">
-        </div>
-      </div>
 
-      <div id="card-karma" class="card">
-        <div class="card-body">
-          <h2 class="card-title">Karma</h2>
-          <p class="card-text">Regularly evaluates our talent to ensure quality</p>
-          <img class="icon" src="images/icon-karma.svg" alt="karma-img">
-        </div>
-      </div>
-
-    </div>
-
-    <div class="right-container">
-      <div id="card-calculator" class="card">
-        <div class="card-body">
-          <h2 class="card-title">Calculator</h2>
-          <p class="card-text">Uses data from past projects to provide better delivery estimates</p>
-          <img class="icon" src="images/icon-calculator.svg" alt="calculator-img">
-        </div>
-      </div>
-    </div>
 
 
 
@@ -78,7 +77,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Nate Ho</a>.
     </p>
   </footer>
 </body>
